--- a/test-04-12/BT2.html
+++ b/test-04-12/BT2.html
@@ -3,16 +3,23 @@
     <head>
         <script>
             let n = 100, result = [];;
-            for(let i = 0; i <= n; i++) {
+            for (let i = 0; i <= n; i++) {
                 if (i % 12 == 0 ) { // 3 && 4
                     result.push(i)
-                } 
-                // else if (i % 3 == 0) {
-                //     result.push(i)
-                // } else if (i % 4 == 0) {
-                //     result.push(i)
-                // }
+                }
             }
+
+            // while loop
+            let i = 0;
+            result = [];
+
+            while (i <= n) {
+                if (i % 12 == 0 ) {
+                    result.push(i)
+                }
+                i++;
+            }
+            
             console.log(result.length)
         </script>
     </head>
