--- a/knockoutjs/index.html
+++ b/knockoutjs/index.html
@@ -1,34 +1,58 @@
 <html>
     <head>
+        <link type="text/css" rel="stylesheet" href="assets/css/bootstrap-3.3.7-dist/bootstrap-3.3.7-dist/css/bootstrap.css">
         <link type="text/css" rel="stylesheet" href="assets/css/app.css" />
+        <script src="node_modules/moment/moment.js"></script>
         <script src="node_modules/knockout/build/output/knockout-latest.debug.js"></script>
     </head>
-    <body style="text-align: center;">
-        <input type="text" data-bind="value: title" />
-        <input type="text" data-bind="value: description" />
-
-        <button data-bind="click: enterNewBook">Add</button>
+    <body style="text-align: center; padding-top: 100px">
+        <div class="form-inline">
+            <div class="form-group">
+                <label>Title</label>
+                <input class="form-control" type="text" data-bind="value: title" />
+            </div>
+            <div class="form-group">
+                <label>Title</label>
+                <input class="form-control" type="text" data-bind="value: description" />
+            </div>
+            
+            <button class="btn btn-primary" data-bind="click: enterNewBook">Add</button class="form-control">
+        </div>
 
         <h2>List Book</h2>
         
-        <table>
+        <table class="table">
             <thead>
-                <th>ID</th>
-                <th>Title</th>
-                <th>Description</th>
-                <th>Updated date</th>
+                <th width="5%">ID</th>
+                <th width="25%">Title</th>
+                <th width="35%">Description</th>
+                <th width="15%">Updated date</th>
                 <th>Actions</th>
             </thead>
             <tbody data-bind="foreach: bookArray">
                 <tr>
-                    <td data-bind="text: $data.id"></td>
-                    <td data-bind="text: $data.title"></td>
-                    <td data-bind="text: $data.description"></td>
+                    <td data-bind="text: $data.id" style="text-align: center;"></td>
+                    <td>
+                        <span data-bind="if: !$data.isUpdating()">
+                            <span data-bind="text: $data.title"></span>
+                        </span>
+                        <span data-bind="if: $data.isUpdating()">
+                            <input class="form-control" type="text" data-bind="value: $root.titleInput" />
+                        </span>
+                    </td>
+                    <td>
+                        <span data-bind="if: !$data.isUpdating()">
+                            <span data-bind="text: $data.description"></span>
+                        </span>
+                        <span data-bind="if: $data.isUpdating()">
+                            <input class="form-control" type="text" data-bind="value: $root.descriptionInput" />
+                        </span>
+                    </td>
                     <td data-bind="text: $data.updatedDate"></td>
                     <td>
-                        <span data-bind="if: !$data.isUpdating"><button data-bind="click: $root.updateBook.bind($root)">Update</button></span>
-                        <span data-bind="if: $data.isUpdating"><button data-bind="click: $root.saveUpdateBook.bind($root)">Save</button></span>
-                        <span><button data-bind="click: $root.deleteBook.bind($root, 'test')">Delete</button></span>
+                        <span data-bind="if: !$data.isUpdating()"><button class="btn btn-warning" data-bind="click: $root.updateBook.bind($root)">Update</button></span>
+                        <span data-bind="if: $data.isUpdating()"><button class="btn btn-success" data-bind="click: $root.saveUpdateBook.bind($root)">Save</button></span>
+                        <span><button class="btn btn-danger" data-bind="click: $root.deleteBook.bind($root, 'test')">Delete</button></span>
                         <!-- <button data-bind="click: function(data, event) { $root.deleteBook(data, event, 'test') }">Delete</button> -->
                     </td>
                 </tr>
